--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@react-firebase/auth": "^0.2.9",
+    "@react-firebase/firestore": "^0.5.4",
     "firebase": "^5.9.4",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
